...
            android:layout_weight="1"
            android:hint="@string/image_width"
            style="@style/input_style"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_style"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/label_style"/>

</LinearLayout>

